feat(ResourceOriented): Added Redis implementation for Resource Oriented Infrastructure fix(Solution): Updated solution packages
Non-functional WIP: Problem with 'Microsoft.Extensions.FileSystemGlobbing' not being found

--- a/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Assets/resource-definition.yaml
+++ b/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Assets/resource-definition.yaml
@@ -1,7 +1,7 @@
-﻿apiVersion: hylo.io/v1
+﻿apiVersion: neuroglia.io/v1
 kind: ResourceDefinition
 metadata:
-  name: resource-definitions.hylo.io
+  name: resource-definitions.neuroglia.io
 spec:
   scope: Cluster
   group: hylo.io
