--- a/src/Neuroglia.Data.Expressions.JavaScript/Neuroglia.Data.Expressions.JavaScript.csproj
+++ b/src/Neuroglia.Data.Expressions.JavaScript/Neuroglia.Data.Expressions.JavaScript.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 	
   <ItemGroup>
-	  <PackageReference Include="Jint" Version="3.0.0-beta-2049" />
+	  <PackageReference Include="Jint" Version="3.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 	
