--- a/src/Neuroglia.Mapping/Neuroglia.Mapping.csproj
+++ b/src/Neuroglia.Mapping/Neuroglia.Mapping.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
