--- a/src/Neuroglia.Data.Infrastructure.ResourceOriented.Redis/Neuroglia.Data.Infrastructure.ResourceOriented.Redis.csproj
+++ b/src/Neuroglia.Data.Infrastructure.ResourceOriented.Redis/Neuroglia.Data.Infrastructure.ResourceOriented.Redis.csproj
@@ -4,7 +4,29 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<Company>Neuroglia SRL</Company>
+    <Copyright>Copyright © 2021-Present Neuroglia SRL. All rights reserved.</Copyright>
+    <Authors>Neuroglia SRL</Authors>
+    <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+	<PackageTags>neuroglia framework data infrastructure resource-oriented redis</PackageTags>
+    <Version>4.8.1</Version>
+    <NeutralLanguage>en</NeutralLanguage>
+	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageIcon>logo_white_on_blue_256.png</PackageIcon>
+    <IsPackable>true</IsPackable>
+	<DebugType>embedded</DebugType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
+      <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
