feat(Redis): Added a new Redis implementation of the IRepository interface fix(Redis): Fixed a critical bug in the RedisDatabase, which was not watching namespaced resources when namespace was not set

--- a/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
+++ b/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
@@ -52,6 +52,7 @@
     <ProjectReference Include="..\..\src\Neuroglia.Data.Infrastructure.Mongo\Neuroglia.Data.Infrastructure.Mongo.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.Infrastructure.ObjectStorage.Minio\Neuroglia.Data.Infrastructure.ObjectStorage.Minio.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.Guards\Neuroglia.Data.Guards.csproj" />
+    <ProjectReference Include="..\..\src\Neuroglia.Data.Infrastructure.Redis\Neuroglia.Data.Infrastructure.Redis.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.Infrastructure.ResourceOriented.Redis\Neuroglia.Data.Infrastructure.ResourceOriented.Redis.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.PatchModel\Neuroglia.Data.PatchModel.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.Schemas.Json\Neuroglia.Data.Schemas.Json.csproj" />
