--- a/src/Neuroglia.Scripting.NodeJS/Neuroglia.Scripting.NodeJS.csproj
+++ b/src/Neuroglia.Scripting.NodeJS/Neuroglia.Scripting.NodeJS.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
 	<PackageTags>neuroglia framework scripting node node-js js javascript</PackageTags>
-    <Version>4.10.0</Version>
+    <Version>4.11.0</Version>
     <NeutralLanguage>en</NeutralLanguage>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
