feat(Infrastructure): Added a new ITextDocumentRepository abstraction and related concepts feat(RedisInfrastructure): Added a new RedisTextDocumentRepository implementation

--- a/src/Neuroglia.Data.Infrastructure.Abstractions/Neuroglia.Data.Infrastructure.Abstractions.csproj
+++ b/src/Neuroglia.Data.Infrastructure.Abstractions/Neuroglia.Data.Infrastructure.Abstractions.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
+    <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
   </ItemGroup>
 
 </Project>
