--- a/src/Neuroglia.Blazor.Dagre/Neuroglia.Blazor.Dagre.csproj
+++ b/src/Neuroglia.Blazor.Dagre/Neuroglia.Blazor.Dagre.csproj
@@ -44,8 +44,11 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
-    <PackageReference Include="Neuroglia.Serialization.NewtonsoftJson" Version="4.15.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.11" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Serialization.NewtonsoftJson\Neuroglia.Serialization.NewtonsoftJson.csproj" />
   </ItemGroup>
 	
 </Project>
