fix(JavaScriptExpressions): Added a new package README file fix(JQExpressions): Added a new package README file
Signed-off-by: Charles d'Avernas <charles.davernas@neuroglia.io>

--- a/src/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
+++ b/src/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
@@ -13,6 +13,7 @@
 	<PackageTags>neuroglia framework data expressions jq</PackageTags>
     <Version>4.16.1</Version>
     <NeutralLanguage>en</NeutralLanguage>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
