--- a/src/Neuroglia.Data.Expressions.JavaScript/Neuroglia.Data.Expressions.JavaScript.csproj
+++ b/src/Neuroglia.Data.Expressions.JavaScript/Neuroglia.Data.Expressions.JavaScript.csproj
@@ -13,6 +13,7 @@
     <PackageTags>neuroglia framework data expressions javascript js</PackageTags>
     <Version>4.16.1</Version>
     <NeutralLanguage>en</NeutralLanguage>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -35,5 +36,12 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data.Expressions.Abstractions\Neuroglia.Data.Expressions.Abstractions.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
