--- a/src/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
+++ b/src/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
@@ -37,4 +37,11 @@
     <ProjectReference Include="..\Neuroglia.Data.Expressions.Abstractions\Neuroglia.Data.Expressions.Abstractions.csproj" />
   </ItemGroup>
 	
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+	
 </Project>
