--- a/src/Neuroglia.Serialization.Xml/Neuroglia.Serialization.Xml.csproj
+++ b/src/Neuroglia.Serialization.Xml/Neuroglia.Serialization.Xml.csproj
@@ -1,5 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
-	
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -10,10 +10,9 @@
     <Authors>Neuroglia SRL</Authors>
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>neuroglia framework data expressions javascript js</PackageTags>
+	<PackageTags>neuroglia framework serialization xml</PackageTags>
     <Version>4.17.0</Version>
     <NeutralLanguage>en</NeutralLanguage>
-	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -21,25 +20,16 @@
     <IsPackable>true</IsPackable>
 	<DebugType>embedded</DebugType>
   </PropertyGroup>
-	
+
   <ItemGroup>
     <None Include="..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
       <PackagePath>\</PackagePath>
       <Pack>True</Pack>
     </None>
-	<None Update="README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
   </ItemGroup>
-	
+
   <ItemGroup>
-	<PackageReference Include="Jint" Version="4.1.0" />
-	<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
   </ItemGroup>
-	
-  <ItemGroup>
-    <ProjectReference Include="..\Neuroglia.Data.Expressions.Abstractions\Neuroglia.Data.Expressions.Abstractions.csproj" />
-  </ItemGroup>
-	
+
 </Project>
