feat(Solution): Add NET8 support
In an addition to existing NET9

--- a/src/Neuroglia.Blazor.Dagre/Neuroglia.Blazor.Dagre.csproj
+++ b/src/Neuroglia.Blazor.Dagre/Neuroglia.Blazor.Dagre.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <Company>Neuroglia SPRL</Company>
     <Copyright>Copyright © 2024 Neuroglia SPRL. All rights reserved.</Copyright>
@@ -43,8 +43,11 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 	
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFrameworks)' == 'net9.0'">
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFrameworks)' == 'net8.0'">
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.12" />
   </ItemGroup>
 	
   <ItemGroup>
