--- a/.github/workflows/dotnet-publish-only.yml
+++ b/.github/workflows/dotnet-publish-only.yml
@@ -9,9 +9,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: ['9.0.x' ]
 
     steps:
       - name: Checkout
@@ -24,10 +21,12 @@ jobs:
         run: |
           git fetch
           git pull
-      - name: Setup .NET ${{ matrix.dotnet-version }}
+      - name: Setup target .NET frameworks
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: ${{ matrix.dotnet-version }}
+          dotnet-version: |
+            8.0.x
+            9.0.x
 
       - name: Restore dependencies
         run: dotnet restore "${{ env.SOLUTION }}"
