--- a/samples/PluginBasedConsoleApp/PluginBasedConsoleApp.csproj
+++ b/samples/PluginBasedConsoleApp/PluginBasedConsoleApp.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="System.Formats.Asn1" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
