--- a/src/Neuroglia.Plugins/Neuroglia.Plugins.csproj
+++ b/src/Neuroglia.Plugins/Neuroglia.Plugins.csproj
@@ -33,12 +33,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
-    <PackageReference Include="NuGet.PackageManagement" Version="6.12.1" />
-	<PackageReference Include="NuGet.Protocol" Version="6.12.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+    <PackageReference Include="NuGet.PackageManagement" Version="6.14.0" />
+	<PackageReference Include="NuGet.Protocol" Version="6.14.0" />
+	<PackageReference Include="System.Formats.Asn1" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
