ci(Versioning): Increment version 4.21.0 -> 4.22.0 [skip ci] [skip hint]

--- a/src/Neuroglia.Data.Flux/Neuroglia.Data.Flux.csproj
+++ b/src/Neuroglia.Data.Flux/Neuroglia.Data.Flux.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
    <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
@@ -10,7 +10,7 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>neuroglia framework data flux</PackageTags>
-    <Version>4.21.0</Version>
+    <Version>4.22.0</Version>
     <NeutralLanguage>en</NeutralLanguage>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
