--- a/src/Neuroglia.Data.Infrastructure.ResourceOriented.Kubernetes/Neuroglia.Data.Infrastructure.ResourceOriented.Kubernetes.csproj
+++ b/src/Neuroglia.Data.Infrastructure.ResourceOriented.Kubernetes/Neuroglia.Data.Infrastructure.ResourceOriented.Kubernetes.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
 	<PackageTags>neuroglia framework data infrastructure resource-oriented k8s kubernetes</PackageTags>
-    <Version>4.23.1</Version>
+    <Version>4.24.0</Version>
     <NeutralLanguage>en</NeutralLanguage>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
